prevent blog page from becoming too narrow

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,11 +1,7 @@
-html {
-  display: grid;
-  place-items: center;
-}
-
 body {
   max-width: var(--content-width);
-  margin-inline: 1rem;
+  margin-inline: auto;
+  padding-inline: 1rem;
   line-height: var(--line-height);
   font-family: var(--font-family-sans-serif);
 }
